--- a/plop-templates/component/src/{{componentName}}.tsx.hbs
+++ b/plop-templates/component/src/{{componentName}}.tsx.hbs
@@ -1,9 +1,10 @@
 
-import * as React from "react"
+import styled from "@emotion/styled";
 
 export type {{capitalize componentName}}Props = {
 }
 
-export function {{capitalize componentName}}(props: {{capitalize componentName}}Props) {
-  return <div></div>;
-}
+
+export const {{capitalize componentName}} = styled.div<{{capitalize componentName}}Props>`
+  color: black;
+`
